add some code to project

--- a/SpatialFiltering/notes/空域滤波.md
+++ b/SpatialFiltering/notes/空域滤波.md
@@ -4,7 +4,7 @@
 
 在正式开始正文之前，我觉得还是先来讨论讨论低频高频的物理意义。
 
-![](D:\ISP\DigitalImageProcessing\SpatialFiltering\images\1.jpg)
+![](..\images\1.jpg)
 
 如图所示，红色、绿色、蓝色分别代表这频率不断增强的波形。在上图我们都能看出对于低频信号，变化程度明显比高频的弱，最低频的就是红色波形，我们称之为直流分量，一点变化都没有。所以以此类推在图像中，高频分量对应变化剧烈的部分，而低频分量对应没有什么变化的区域。而对于图像而言，变化剧烈的很明显就是边缘和细节，而不怎变化的区域对应着平坦区域，所以**频率对于图像的物理意义就是，高频对应变化剧烈的边缘或者细节，而低频则对应变化小的平坦区域**。进一步我们也很容易就能联想到低频滤波就是把高频滤除掉，那么高频分量减少就会使得图像边缘和细节不明显从而变模糊，但是噪点是正常图像中一个突然不同的部分，所以早掉的变化也是很大的同样属于高频分量，所以低通滤波有去噪的功能。同理，高通滤波则是反过来，刚好是提取边缘。
 
@@ -33,7 +33,7 @@
 我们知道还有一种叫做加权平均值，就是平均之前每每个数的权重不一样，其实在图形中更好理解，某一个点的值肯定和本身的像素值关系最大，所以对应的本身哪个点的权重就会更大些，我么通过以下公式计算
 $$
 \begin{aligned} 
-f(i, j) = \frac{1}{16} * [&f(i-1, j-1) *1 +f(i-1, j) * 2+f(i-1, j+1)*1+\\
+f(i, j)& = \frac{1}{16} * [f(i-1, j-1) *1 +f(i-1, j) * 2+f(i-1, j+1)*1+\\
            & f(i, j-1)*2+f(i, j)*4+f(i, j+1)*2+f(i+1, j-1)*1+f(i+1, j)*2+f(i+1, j+1)*1)]
 \end{aligned}
 $$
@@ -43,7 +43,7 @@ $$
 
 
 
-![image-20210306134022719](D:\ISP\DigitalImageProcessing\SpatialFiltering\images\2.png)![image-20210306134128667](D:\ISP\DigitalImageProcessing\SpatialFiltering\images\3.png)
+![image-20210306134022719](..\images\2.png)![image-20210306134128667](..\images\3.png)
 
 
 
@@ -99,7 +99,7 @@ subplot(223);imshow(newImg);title('new image');
 subplot(224);imshow(img-newImg);title('newImg-img');
 ```
 
-运行结果：![](D:\ISP\DigitalImageProcessing\SpatialFiltering\images\meanFilter.jpg)
+运行结果：![](..\images\meanFilter.jpg)
 
 如图所示，地方附图就是经过均值滤波处理后的效果，和第一幅图比起来变得更模糊。通过原始图像和新图像最差就能得到最后的图像，新清晰的看到边缘和部分噪点是被滤除掉了。通过更换不同的滤波器就能实现不同的均值滤波。
 
@@ -167,7 +167,7 @@ subplot(223);imshow(newImg);title('new image');
 subplot(224);imshow(img-newImg);title('newImg-img');
 ```
 
-运行结果：![](D:\ISP\DigitalImageProcessing\SpatialFiltering\images\midFilter.jpg)
+运行结果：![](..\images\midFilter.jpg)
 
 #### 总结
 
@@ -180,6 +180,64 @@ subplot(224);imshow(img-newImg);title('newImg-img');
 ---
 
 ## 锐化空间滤波
+
+锐化刚好和平滑的效果相反，锐化就是图示边界和细节，也就是突变厉害的地方。理想的突变是阶跃响应如图所示
+
+![](..\images\2.jpg)
+
+即从从黑直接变为白，这种很明显的边缘，但是实际中的边界往往是渐变的，二维示意图如下![](..\images\f.jpg)
+
+这种函数很容易就能联想到斜率必定是有一个突变的过程，那么我们就能联想到通过求导后的极大或者极小值来求突变点也就是突变的边界，对以上函数求导我们称之为求梯度。其结果如下图
+
+![](..\images\f1.jpg)
+
+很明显通过求导之后能很容易找到边界，数学中我们都知道求导的定义是$$\lim _{\Delta x \rightarrow 0} \frac{\Delta y}{\Delta x}\left(=\lim _{\Delta x \rightarrow 0} \frac{f\left(x_{0}+\Delta x\right)-f\left(x_{0}\right)}{\Delta x}=\lim _{x \rightarrow x_{0}} \frac{f(x)-f\left(x_{0}\right)}{x-x_{0}}\right)$$
+
+对于二维函数f(x,y) 在(x,y)处的梯度为一个向量：处的梯度为一个向量： ∇f = [∂f / ∂x , ∂f /∂y]
+
+计算这个向量的大小为： ∇f = mag(∇f ) = [(∂f / ∂x) 2 +(∂f / ∂y) 2 ] 1/2
+
+![](..\images\4.png)
+
+在图像里用（z 5 – z 6 ）近似求(∂f / ∂x)  ，用（z 5 – z 8 ）近似求(∂f / ∂y)。  进一步为了简化运算，往往用用绝对值替换平方和平方根 有：∇f ≈ |z 5 - z 6 | + |z 5 - z 8 |；
+
+通过上面的分析很容易能设计出以下的算子来求边界，先通过第一个算子求出竖直方向的边界，至于为什么这样能求出来边界，出了上面数学方法的推导，其实也很容易解释其物理意义。因为边界顾名思义都是突变的地方，所以两边的像素值相差很大，那么差值就很大，在像素值上变现为白色，儿相近的平坦区相减就接近黑，那么很明显边界就能被凸显出来。同理，通过第二个算子就能求出水平方向的边界。一般情况下锐化得到边界时我们都是二值图像，边界为白色，非边界为黑色，但是这么减出来的像素值很明显是有随机性的，所以需要加一个阈值判断是否为边界。
+
+![](..\images\5.png)
+
+上述的方法具体代码实现如下：
+
+```matlab
+
+```
+
+
+
+### Roberts 交叉梯度算子
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
