添加部分空域滤波note

--- a/SpatialFiltering/notes/空域滤波.md
+++ b/SpatialFiltering/notes/空域滤波.md
@@ -208,28 +208,208 @@ subplot(224);imshow(img-newImg);title('newImg-img');
 上述的方法具体代码实现如下：
 
 ```matlab
+clear;
+clc;
+close all;
+f = imread('./images/house.tif');
+figure();
+subplot(121);imshow(f);title('org');
 
+I = im2double(f);
+[m, n] = size(f);
+B=zeros(size(f));
+for x=1:m-1
+    for y=1:n-1
+        B(x,y)=abs(I(x, y)+I(x, y+1)-I(x+1, y)-I(x+1, y+1))+abs(I(x, y)+I(x+1, y)-I(x, y+1)-I(x+1, y+1));
+    end
+end
+B_max = max(max(B));
+B_min = min(min(B));
+
+thresh = 20/255; % 设置阈值
+
+for x=1:m
+    for y=1:n
+        if B(x, y) > ((B_max-B_min) * thresh)
+            B(x,y)=255;
+        else
+            B(x,y)=0;
+        end
+    end
+end
+subplot(122);imshow(B);title('new img');
 ```
 
-
+运行效果如图![](../images/3.jpg)
 
 ### Roberts 交叉梯度算子
 
+#### 算法说明
 
+上述的方法通过计算∇f ≈ |z 5 + z 6 -z 8 - z 9 | + |z 5 + z 8 -z 6 - z 9|来求边界，Roberts 交叉梯度算子就是从上式进一步简化得来的一种算子。观察算子我们会发现是两个绝对值相加，前面和后面都是$$z5-z9$$ 不同的只是z6 和z8的区别，所以Roberts进一步简化算是得到以下算子∇f ≈ |z 5  - z 9 | + | z 6 -z 8|
 
+#### 算法实现
 
+```matlab
+%% --------------------------------
+%% author:wtzhu
+%% email:wtzhu_13@163.com
+%% date: 20210203
+%% fuction: Roberts 交叉梯度算子
+%% --------------------------------
 
+clear;
+clc;
+close all;
+f = imread('./images/house.tif');
+figure();
+subplot(121);imshow(f);title('org');
+I = im2double(f);
+[m, n] = size(f);
+C=zeros(size(f));
+for x=1:m-1
+    for y=1:n-1
+        C(x,y)=abs(I(x, y)-I(x+1, y+1))+abs(I(x, y+1)-I(x+1, y));
+    end
+end
+C_max = max(max(C));
+C_min = min(min(C));
+thresh = 20/255;
+for x=1:m
+    for y=1:n
+        if C(x, y) > ((C_max-C_min) * thresh)
+            C(x,y)=255;
+        else
+            C(x,y)=0;
+        end
+    end
+end
+subplot(122);imshow(C);title('new img');
+```
 
+运行结果![](../images/roberts.jpg)
 
+###   Prewitt梯度算子
 
+#### 算法说明
 
+上面讨论的两种算子都是2x2的算子，从前面平滑滤波中可以看到用得更多的是奇数算子，所以在上面描述的两种算子的基础上推导出一种3x3的的算子——Prewitt梯度算子。
 
+![](../images/6.png)
 
+其实这个算子和前面介绍的算子是一样的，只是从2x2拓展成了3x3。∇f ≈ |(z 7 +z 8 + z 9 ) - (z 1  + z 2 + z 3 )| +
+|(z 3 +z 6 + z 9 ) - (z 1  + z 4 + z 7 )|
 
+#### 算法实现
 
+```matlab
+%% --------------------------------
+%% author:wtzhu
+%% email:wtzhu_13@163.com
+%% date: 20210316
+%% fuction: Prewitt 交叉梯度算子
+%% --------------------------------
 
+clear;
+clc;
+close all;
+f = imread('./images/house.tif');
+figure();
+subplot(121);imshow(f);title('org');
+I = im2double(f);
+[m, n] = size(f);
+B=zeros(size(f));
+for x=2:m-2
+    for y=2:n-2
+        B(x,y)=abs(I(x+1, y-1)+I(x+1, y)+I(x+1, y+1)-I(x-1, y-1)-I(x-1, y)-I(x-1, y+1)) ...
+              +abs(I(x-1, y+1)+I(x, y+1)+I(x+1, y+1)-I(x-1, y-1)-I(x, y-1)-I(x+1, y-1));
+    end
+end
+B_max = max(max(B));
+B_min = min(min(B));
+thresh = 20/255;
+for x=1:m
+    for y=1:n
+        if B(x, y) > ((B_max-B_min) * thresh)
+            B(x,y)=255;
+        else
+            B(x,y)=0;
+        end
+    end
+end
+subplot(122);imshow(B);title('new img');
+```
 
+运行结果
 
+![](../images/prewitt.jpg)
+
+### Sobel梯度算子
+
+#### 算法说明
+
+在前面的平滑滤波中我们也学习过加权的方式来定义算子，那么在锐化滤波的过程也可以通过加权的方式来定义算子，毕竟邻域内个点对于中心点的贡献程度理论上是不一样的，所以在Prewitt算子的基础上通过加权的方式就形成了Sobel算子。∇f ≈  |(z 7 +2z 8 + z 9 ) - (z 1  + 2z 2 + z 3 )| +|(z 3 +2z 6 + z 9 ) - (z 1  + 2z 4 + z 7 )。
+
+![](../images/7.png)
+
+#### 算法实现
+
+```matlab
+%% --------------------------------
+%% author:wtzhu
+%% email:wtzhu_13@163.com
+%% date: 20210316
+%% fuction: Sobel 交叉梯度算子
+%% --------------------------------
+clear;
+clc;
+close all;
+f = imread('./images/house.tif');
+figure();
+subplot(121);imshow(f);title('org');
+I = im2double(f);
+[m, n] = size(f);
+B=zeros(size(f));
+for x=2:m-2
+    for y=2:n-2
+        B(x,y)=abs(I(x+1, y-1)+2*I(x+1, y)+I(x+1, y+1)-I(x-1, y-1)-2*I(x-1, y)-I(x-1, y+1)) ...
+              +abs(I(x-1, y+1)+2*I(x, y+1)+I(x+1, y+1)-I(x-1, y-1)-2*I(x, y-1)-I(x+1, y-1));
+    end
+end
+B_max = max(max(B));
+B_min = min(min(B));
+thresh = 20/255;
+for x=1:m
+    for y=1:n
+        if B(x, y) > ((B_max-B_min) * thresh)
+            B(x,y)=255;
+        else
+            B(x,y)=0;
+        end
+    end
+end
+subplot(122);imshow(B);title('new img');
+```
+
+运行结果![](../images/sobel.jpg)
+
+### 拉普拉斯二阶微分算子
+
+#### 算法说明
+
+前面介绍的几种算子都是一阶微分算子，就是求一阶偏导后通过最大最小值来判断边界，如图![](..\images\f1.jpg)
+
+既然一阶偏导通过极大极小值可以找到边界那么继续求一次偏导通过零点是不是也能找到边界呢，理论上是可行的![](../images/f2.jpg)
+
+从图中就能看到原先的极大值在求完导数后很自然的就是0点，也就很容易找到边界。但是有的人最这张图的图不能理解，因为虽然0点是边界，但是从图中也很容易看到无穷远也趋近0，也就是图中大部分范围都在0附近，该如何区分。其实这幅图像是对连续信号而言的，对于图像这种数字信号往往都是近似处理。从图中其实最明显的地方不是0点，而是极大极小值，我们连续的0点其实就是在极大极小中间，而真正的边界往往在离散过程中并不完全在采样点上，所以我们直接用极大极小值来当做边界。用一个数组来讲可能更清楚。
+
+     0     0     0   255   255   255
+     0     0     0   255   255   255
+     0     0     0   255   255   255
+     0     0     0   255   255   255
+     0     0     0   255   255   255
+     0     0     0   255   255   255
+有上面这样一个数组，我们暂且当做是一幅图，那么这幅图的边界在哪里，很明显如果是连续的信号，那么必定在第三列数据和第四列数据之间，但是采样点不可能是小数，所以这个时候要么就把第三列当做边界，要么把第四列当做边界，或者干脆把三四列都当做边界来处理。
 
 
 
