完成空间滤波篇

--- a/SpatialFiltering/notes/空域滤波.md
+++ b/SpatialFiltering/notes/空域滤波.md
@@ -101,7 +101,7 @@ subplot(224);imshow(img-newImg);title('newImg-img');
 
 运行结果：![](..\images\meanFilter.jpg)
 
-如图所示，地方附图就是经过均值滤波处理后的效果，和第一幅图比起来变得更模糊。通过原始图像和新图像最差就能得到最后的图像，新清晰的看到边缘和部分噪点是被滤除掉了。通过更换不同的滤波器就能实现不同的均值滤波。
+如图所示，第三幅图就是经过均值滤波处理后的效果，和第一幅图比起来变得更模糊。通过原始图像和新图像最差就能得到最后的图像，新清晰的看到边缘和部分噪点是被滤除掉了。通过更换不同的滤波器就能实现不同的均值滤波。
 
 #### 总结
 
@@ -411,9 +411,27 @@ subplot(122);imshow(B);title('new img');
      0     0     0   255   255   255
 有上面这样一个数组，我们暂且当做是一幅图，那么这幅图的边界在哪里，很明显如果是连续的信号，那么必定在第三列数据和第四列数据之间，但是采样点不可能是小数，所以这个时候要么就把第三列当做边界，要么把第四列当做边界，或者干脆把三四列都当做边界来处理。
 
+对于一个连续的二元函数F(x, y)，其拉普拉斯算子定义为$$\nabla^{2} F(x, y)=\frac{\partial^{2} F}{\partial x^{2}}+\frac{\partial^{2} F}{\partial y^{2}}$$ , 对于图像我们近似为$$\boldsymbol{G}(x, y)=4 F(x, y)-F(x+1, y)-F(x-1, y)-F(x, y+1)-F(x, y-1)$$来求解。 
 
+#### 算法实现
 
+直接通过MATLAB工具箱的函数来实现，如果想自己实现就参照上面的方式修改算子即可。
 
+```matlab
+clear;
+clc;
+close all;
+img = imread('./images/house.tif');
+[height, width] = size(img);
+figure;subplot(121);imshow(img);title('original image');
+
+img1 = im2single(img);
+w = fspecial('laplacian', 0);
+I1 = imfilter(img, w, 'replicate');
+subplot(122);imshow(I1);title('laplacian image');
+```
+
+运行结果![](../images/laplacian.jpg)
 
 
 
